# Rosetta-6502

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  PROJECT_STYLE.md  README.md  a.out  build.sh  compile_commands.json  layout  main_firmware.asm  portifolio.md
.cache/clangd/index/: adc.h.5416D57950AA914B.idx  and.h.D481F38A27027DC1.idx  asl.h.70CC02CE67EE0B67.idx  bcc.h.C37D9DC7768A1FCC.idx  bcs.h.B9328A7765D06F9C.idx  beq.h.EE8E48D295319ED4.idx  bit.h.9AB77B9CF670E24E.idx  bmi.h.51B0665DD28155FC.idx  bne.h.4978C4AB2EEF4D74.idx  bpl.h.686D6E67769678B9.idx  bvc.h.69C54185251B1C03.idx  bvs.h.D2903FA456969E47.idx  clc.h.9F311F95B6DBE033.idx  cld.h.4F50AFEAE5DBF973.idx  cli.h.17DF2439DDCB7556.idx  (+42 more)
.github/workflows/: ci.yml
CPU/6502/: cpu6502.c  cpu6502.h  cpu_exec.c  main.c  make.c
CPU/x86/: main.c
docs/: debug.md  firmware.md  instructions.md
examples/: examples.md
examples/00-minimal-hello/: firmware.asm  mmio.cfg  none.cfg
examples/01-brk-handler/: firmware.asm  mmio.cfg  none.cfg
include/: access_type.h  bus.h  config.c  config.h  cpu6502.h  cpu_exec.h  debug.h  loader.h  mem6502.h  memory_map.h  mmio.h
src/: main.c
src/bus/: bus.c  mem6502.c
src/cpu/: cpu6502.c  cpu_exec.c
src/debug/: debug.c
src/mmio/: default_handlers.c  mmio.c  mmio_config.c
src/utils/: loader.c  render_ram.c  render_ram.h
tests/: Makefile  globals.c  test.c
tests/include/: ld_helpers.h  test_config.h  test_template.h
tests/ld/: ld_helpers.c
tests/rt/: rt_helpers.c
tests/st/: st_helpers.c
(+123 files in other folders)
